# TaskFlow

./: .gitignore  Cargo.toml  README.md  install.sh  taskflow-app-spec.md
crates/taskflow-core/: Cargo.toml
crates/taskflow-core/src/: lib.rs  models.rs  parser.rs
crates/taskflow-core/src/db/: mod.rs  schema.rs  sync_meta.rs  task_lists.rs  tasks.rs
crates/taskflow-core/src/google/: mod.rs  oauth.rs  tasks_api.rs  token.rs
crates/taskflow-core/src/sync/: conflict.rs  engine.rs  mod.rs  recurrence.rs
crates/taskflow-core/tests/: db_tests.rs  recurrence_tests.rs
crates/taskflow-daemon/: Cargo.toml
crates/taskflow-daemon/src/: main.rs
crates/taskflow-gui/: Cargo.toml
crates/taskflow-gui/src/: app.rs  main.rs  theme.rs
crates/taskflow-gui/src/widgets/: icons.rs
packaging/aur/: PKGBUILD
packaging/desktop/: taskflow.desktop
packaging/systemd/: taskflow-daemon.service
